--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,28 @@
-# Compiled class file
-*.class
+# Build and Release Folders
+bin-debug/
+bin-release/
+[Oo]bj/
+[Bb]in/
 
-# Log file
-*.log
+# Other files and folders
+.settings/
 
-# BlueJ files
-*.ctxt
+# Executables
+*.swf
+*.air
+*.ipa
+*.apk
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
+# should NOT be excluded as they contain compiler settings and other important
+# information for Eclipse / Flash Builder.
+.vs/DommunBackend/config/applicationhost.config
+.vs/DommunBackend/DesignTimeBuild/.dtbcache.v2
+.vs/DommunBackend/FileContentIndex/7c2a7890-0d33-4cfd-a2fd-b0468632d402.vsidx
+.vs/DommunBackend/FileContentIndex/fc3430ac-2e1b-437f-96a8-79ca2afd5482.vsidx
+.vs/DommunBackend/FileContentIndex/read.lock
+.vs/DommunBackend/v17/.futdcache.v1
+.vs/DommunBackend/v17/.suo
+.vs/ProjectEvaluation/dommunbackend.metadata.v2
+.vs/ProjectEvaluation/dommunbackend.projects.v2
+.vs/
